# drift

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  pages.yml  release.yml
examples/: dump_colors.rs  dump_tokens.rs  perf.rs  pr_demo.rs
hlcheck/: README.md  compare.py  dump.lua  run.sh
hlcheck/samples/: keywords.rs  keywords.ts  sample.py  sample.rs  sample.ts
site/: index.html
src/: cli.rs  config.rs  events.rs  keymap.rs  lib.rs  main.rs  theme.rs  tree.rs
src/app/: code_view.rs  compose.rs  mod.rs  panes.rs  picker.rs  pr.rs  review.rs  tree_nav.rs  view_cache.rs
src/forge/: gh.rs  glab.rs  mod.rs  model.rs  patch.rs
src/processor/: blocks.rs  comments.rs  emphasis.rs  highlight.rs  mod.rs  splice.rs  tabs.rs  treesitter.rs  view.rs
src/ui/: compose.rs  diff_view.rs  file_list.rs  help.rs  mod.rs  picker.rs  status_bar.rs
src/vcs/: gitoxide.rs  mod.rs  model.rs  unidiff.rs
tests/: git_vcs.rs
