[package]
name = "drift"
version = "0.1.1"
edition = "2024"
description = "Review your working changes like a pull request, in the terminal"
license = "MIT"
repository = "https://github.com/tothalex/drift"

# Dev builds stay unoptimized for our own code (fast rebuilds), but
# dependencies — tree-sitter's C grammars, query compilation — get -O2:
# they dominate per-keystroke latency and rarely recompile.
[profile.dev.package."*"]
opt-level = 2

[dependencies]
anyhow = "1.0.103"
arboard = "3.6.1"
clap = { version = "4.6.2", features = ["derive"] }
crossterm = "0.29.0"
gix = "0.85.0"
imara-diff = "0.2.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
similar = "3.1.1"
streaming-iterator = "0.1.9"
thiserror = "2.0.18"
toml = "1.1.3"
tree-sitter = "0.26.11"
tree-sitter-go = "0.25.0"
tree-sitter-highlight = "0.26.11"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
tempfile = "3.27.0"
